# hyperbolic_learning_library

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check_code_quality.yml  deploy.yml  run_unit_tests.yml
docs/: Makefile  README.md
docs/source/: api.rst  conf.py  index.rst  install.rst
hll/manifolds/: __init__.py
hll/manifolds/base/: manifold.py
hll/manifolds/euclidean/: manifold.py
hll/manifolds/poincare_ball/: __init__.py  curvature.py  manifold.py
hll/manifolds/poincare_ball/math/: diffgeom.py  linalg.py  stats.py
hll/nn/: __init__.py
hll/nn/modules/: activation.py  batchnorm.py  change_manifold.py  container.py  convolution.py  embedding.py  expmap0.py  flatten.py  fold.py  linear.py  pooling.py
hll/optim/: __init__.py  adam.py  sgd.py
hll/tensors/: __init__.py  manifold_parameter.py  manifold_tensor.py  tangent_tensor.py
hll/utils/: layer_utils.py  math.py  tensor_utils.py
hypdl/manifolds/: __init__.py
hypdl/manifolds/base/: __init__.py  manifold.py
hypdl/manifolds/euclidean/: manifold.py
hypdl/manifolds/poincare_ball/: curvature.py  manifold.py
hypdl/manifolds/poincare_ball/math/: diffgeom.py  linalg.py  stats.py
hypdl/nn/: __init__.py
hypdl/nn/modules/: activation.py  batchnorm.py  container.py  convolution.py  embedding.py  expmap0.py  flatten.py  fold.py  linear.py  pooling.py
hypdl/optim/: adam.py  sgd.py
hypdl/tensors/: __init__.py  manifold_parameter.py  manifold_tensor.py  tangent_tensor.py
hypdl/utils/: layer_utils.py  tensor_utils.py
hypll/manifolds/base/: manifold.py
hypll/manifolds/euclidean/: __init__.py  manifold.py
hypll/manifolds/poincare_ball/: curvature.py  manifold.py
hypll/nn/: __init__.py
hypll/nn/modules/: activation.py  attention.py  batchnorm.py  change_manifold.py  container.py  convolution.py  embedding.py  flatten.py  fold.py  linear.py  pooling.py
hypll/optim/: adam.py  sgd.py
hypll/tensors/: manifold_parameter.py  manifold_tensor.py  tangent_tensor.py
hypll/utils/: layer_utils.py  math.py  tensor_utils.py
tests/: tensor_tests.py  test_manifold_tensor.py
tests/manifolds/euclidean/: test_euclidean.py
tests/manifolds/poincare_ball/: test_curvature.py  test_poincare_ball.py
tests/nn/: test_change_manifold.py  test_convolution.py  test_expmap0.py  test_flatten.py
tutorials/: cifar10_resnet_tutorial.py  cifar10_tutorial.py  hyperbolic_vit_tutorial.py  poincare_embeddings_tutorial.py
tutorials/data/: wordnet_mammals.json
(+3 files in other folders)
