[tool.poetry]
name = "hypll"
version = "0.1.1"
description = "A framework for hyperbolic learning in PyTorch"
authors = ["Max Spengler", "Philipp Wirth", "Pascal Mettes"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-mock = "*"
sphinx = "*"
sphinx-copybutton = "*"
sphinx-gallery = "*"
sphinx-tabs = "*"
matplotlib = "*"
networkx = "*"
torchvision = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"