[tool.poetry]
name = "hypll"
version = "0.1.1"
description = "A framework for hyperbolic learning in PyTorch"
authors = ["Max Spengler", "Philipp Wirth", "Pascal Mettes"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-mock = "*"

[tool.poetry.group.docs.dependencies]
sphinx-copybutton = "^0.5.2"
sphinx = "^7.2.6"
sphinx-gallery = "^0.15.0"
sphinx-tabs = "^3.4.5"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
